# Qurb

./: .clang-format  .gitignore  CMakeLists.txt  README.md  premake5.lua
Qurb/: CMakeLists.txt
Qurb/Engine/: CMakeLists.txt  premake5.lua
Qurb/Engine/Core/: CMakeLists.txt  Core.Build.lua
Qurb/Engine/Core/Private/Log/: Log.cpp
Qurb/Engine/Core/Private/Platform/MacOS/: Console.cpp  DynamicLibrary.cpp
Qurb/Engine/Core/Public/: CoreDefines.hpp  CoreMinimal.hpp  CoreTraits.hpp  CoreTypes.hpp  CoreUtility.hpp
Qurb/Engine/Core/Public/Containers/: Array.hpp  Vector.hpp
Qurb/Engine/Core/Public/Debug/: Ensure.hpp  Exceptions.hpp
Qurb/Engine/Core/Public/Delegates/: Delegate.hpp  MulticastDelegate.hpp
Qurb/Engine/Core/Public/Log/: Log.hpp
Qurb/Engine/Core/Public/Math/: Matrix4x4.hpp  Quaternion.hpp  TypeTraits.hpp  Vector2.hpp  Vector3.hpp  Vector4.hpp
Qurb/Engine/Core/Public/Misc/: Clock.hpp
Qurb/Engine/Core/Public/Platform/: Console.hpp  Detection.hpp  DynamicLibrary.hpp
Qurb/Engine/MetalRHI/: CMakeLists.txt  MetalRHI.Build.lua
Qurb/Engine/MetalRHI/Private/: MetalBuffer.mm  MetalDevice.mm  MetalPipelineState.mm  MetalPlugin.mm  MetalRenderBackend.mm  MetalRenderContext.mm  MetalRenderTarget.mm  MetalShaderProgram.mm  MetalSwapChain.mm  MetalTexture.mm
Qurb/Engine/MetalRHI/Public/: MetalBuffer.hpp  MetalDevice.hpp  MetalPipelineState.hpp  MetalPlugin.hpp  MetalRHI.hpp  MetalRenderBackend.hpp  MetalRenderContext.hpp  MetalRenderTarget.hpp  MetalShaderProgram.hpp  MetalSwapChain.hpp  MetalTexture.hpp
Qurb/Engine/Runtime/: CMakeLists.txt  Runtime.Build.lua
Qurb/Engine/Runtime/Private/Assets/: TextureManager.cpp
Qurb/Engine/Runtime/Private/Core/: Engine.cpp
Qurb/Engine/Runtime/Private/Input/: Input.cpp  KeyCode.cpp
Qurb/Engine/Runtime/Private/Platform/MacOS/: ApplicationDelegate.hpp  ApplicationDelegate.mm  Platform.mm  View.hpp  View.mm  Window.mm  WindowDelegate.hpp  WindowDelegate.mm
Qurb/Engine/Runtime/Private/Plugins/: PluginManager.cpp
Qurb/Engine/Runtime/Private/Renderer/: Color.cpp  Renderer.cpp
Qurb/Engine/Runtime/Private/Scene/: Camera.cpp  EntityRegistery.cpp  EntityRegistry.cpp  SceneRenderer.cpp
Qurb/Engine/Runtime/Public/: EntryPoint.hpp
Qurb/Engine/Runtime/Public/Assets/: TextureManager.hpp
Qurb/Engine/Runtime/Public/Core/: Application.hpp  Engine.hpp
Qurb/Engine/Runtime/Public/Events/: Event.hpp  EventDispatcher.hpp  WindowEvents.hpp
Qurb/Engine/Runtime/Public/Input/: Input.hpp  KeyCode.hpp  Keyboard.hpp  Mouse.hpp  MouseButton.hpp
Qurb/Engine/Runtime/Public/Platform/: Platform.hpp  Window.hpp
Qurb/Engine/Runtime/Public/Platform/MacOS/: NativeWindow.hpp
Qurb/Engine/Runtime/Public/Plugins/: Plugin.hpp  PluginManager.hpp
Qurb/Engine/Runtime/Public/RHI/: Buffer.hpp  Device.hpp  Object.hpp  PipelineState.hpp  Plugin.hpp  RHIPlugin.hpp  RenderBackend.hpp  RenderContext.hpp  RenderPass.hpp  RenderTarget.hpp  ShaderProgram.hpp  SwapChain.hpp  Texture.hpp  TextureFormat.hpp
Qurb/Engine/Runtime/Public/Renderer/: Color.hpp  Renderer.hpp
Qurb/Engine/Runtime/Public/Scene/: Camera.hpp  Components.hpp  Entity.hpp  EntityRegistery.hpp  EntityRegistry.hpp  Scene.hpp  SceneRenderer.hpp
Samples/: CMakeLists.txt
Samples/QurbSandbox/: CMakeLists.txt  QurbSandbox.Build.lua
Samples/QurbSandbox/Private/: Sandbox.cpp
Samples/QurbSandbox/Public/: Sandbox.hpp
Scripts/: GenerateProject.command
